0.9/_sources/reference/data_ops.rst.txt
:html_theme.sidebar_secondary.remove:

.. _data_ops_ref:

.. title:: data_ops


.. currentmodule:: skrub


DataOps
-------






Generalizing the scikit-learn pipeline. See :ref:`skrub DataOps <user_guide_data_ops_index>` for further details.






.. autosummary::
  :nosignatures:
  :toctree: generated/
  :template: base.rst


  var
  X
  y
  as_data_op
  deferred




The DataOp object.






.. autosummary::
  :nosignatures:
  :toctree: generated/
  :template: data_op_class.rst


  DataOp




Inline hyperparameters selection in your DataOps plan.






.. autosummary::
  :nosignatures:
  :toctree: generated/
  :template: base.rst


  choose_bool
  choose_float
  choose_int
  choose_from
  optional




Evaluate your DataOps plan.






.. autosummary::
  :nosignatures:
  :toctree: generated/
  :template: base.rst


  cross_validate
  eval_mode




The ``skb`` accessor exposes all DataOps methods and attributes.






.. autosummary::
  :nosignatures:
  :toctree: generated/
  :template: autosummary/accessor_method.rst


  DataOp.skb.apply
  DataOp.skb.apply_func
  DataOp.skb.clone
  DataOp.skb.concat
  DataOp.skb.cross_validate
  DataOp.skb.describe_defaults
  DataOp.skb.describe_param_grid
  DataOp.skb.describe_steps
  DataOp.skb.draw_graph
  DataOp.skb.drop
  DataOp.skb.eval
  DataOp.skb.freeze_after_fit
  DataOp.skb.full_report
  DataOp.skb.get_data
  DataOp.skb.get_vars
  DataOp.skb.make_learner
  DataOp.skb.make_grid_search
  DataOp.skb.make_randomized_search
  DataOp.skb.if_else
  DataOp.skb.iter_cv_splits
  DataOp.skb.iter_learners_grid
  DataOp.skb.iter_learners_randomized
  DataOp.skb.mark_as_X
  DataOp.skb.mark_as_y
  DataOp.skb.match
  DataOp.skb.preview
  DataOp.skb.select
  DataOp.skb.set_description
  DataOp.skb.set_name
  DataOp.skb.subsample
  DataOp.skb.train_test_split
  DataOp.skb.with_scoring
  DataOp.skb.find
  DataOp.skb.find_X_y




Accessor attributes.






.. autosummary::
  :nosignatures:
  :toctree: generated/
  :template: autosummary/accessor_attribute.rst


  DataOp.skb.description
  DataOp.skb.is_X
  DataOp.skb.is_y
  DataOp.skb.name
  DataOp.skb.applied_estimator




Objects generated by the DataOps.






.. autosummary::
  :nosignatures:
  :toctree: generated/
  :template: base.rst


  SkrubLearner
  ParamSearch
  OptunaParamSearch
